# Compello

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
compello/: __init__.py  assertions.py  config.py  distillation.py  exceptions.py  fixtemplates.py  insights.py  interop.py  jax.py  penalties.py  preflight_render.py  proxy.py  relaxations.py  report_style.py  reports.py  serialization.py  surrogates.py  target_support.py  targets.py  telemetry.py  tf.py  validation.py
compello/backends/: __init__.py  jax_backend.py  protocol.py  sync.py  tf_backend.py  torch_backend.py
compello/controller/: __init__.py  ceiling.py  controller.py  ema.py  pid.py  sharpness.py  state.py
compello/diagnostics/: __init__.py  coldstart.py  conflict.py  regression.py  runner.py  surgery.py
compello/math/: __init__.py  _base.py  _keras_backend.py  _numpy_backend.py
compello/trainlint/: __init__.py  cli.py  core.py  flake8_plugin.py  jax_rules.py  pytorch_rules.py  tensorflow_rules.py
examples/: buggy_llm.py  demo_training.py
tests/: test_assertions.py  test_backend_logic.py  test_config_validation.py  test_controller.py  test_diagnostics.py  test_gap_closure.py  test_hardening.py  test_interop_backends.py  test_math.py  test_penalties.py  test_proxy_targets.py  test_renderers.py  test_trainlint.py
tests/integration/: test_jax_integration.py  test_tf_integration.py  test_torch_integration.py
